* fix (#2297): Fix hidden hamburger menu on mobile
* fix (#2297): Keep icon hidden on home page under side menu

* refactor (#2297): Remove duplicate z-index definition

* refactor (#2297): Setup base z-index manifest

* refactor (#2297): Abstract sidebar z-index baseline

* refactor (#2297): Establish base header z-index

* refactor (#2297): Establish z-index for overlay and modals

--- a/themes/vue/source/css/_sponsors-sidebar.styl
+++ b/themes/vue/source/css/_sponsors-sidebar.styl
@@ -32,11 +32,11 @@
   display: block
 
 #sidebar-sponsors-platinum-right
-  display: none
-  position: fixed
-  z-index: 99
-  top: 90px
-  right: 20px
+  display none
+  position fixed
+  z-index ($z-header - 1)
+  top 90px
+  right 20px
 
 @media screen and (min-width: 1300px)
   #sidebar-sponsors-platinum-left
